<resources>
    <string name="app_name">Ultherapy_Android</string>
    <string name="str_remain">Remain</string>
    <string name="str_current">Current</string>
    <string name="default_current_num">0</string>
    <string name="default_remain_num">0</string>
    <string name="unit_j">J</string>
    <string name="default_energy_value">0.1</string>
    <string name="str_totalused">Totalused</string>
    <string name="default_totalused_num">0</string>
    <string name="default_need_num">300</string>
    <string name="default_start_num">0</string>
    <string name="default_single">Single</string>
    <string name="default_length">25</string>
    <string name="str_length">Length</string>
    <string name="unit_mm">mm</string>
    <string name="str_memory">Memory 3</string>
    <string name="default_normal">Normal</string>
    <string name="str_mp">MP</string>
    <string name="str_pitch">Pitch</string>
    <string name="default_pitch">1.5</string>
    <string name="str_setup">Setup/Info</string>
    <string name="default_standby"><u>STANDBY</u></string>
    <string name="default_ready"><u>READY</u></string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="str_interval">Interval</string>
    <string name="remind_choice">Please select a value</string>
    <string name="default_choice_repeat">0.1</string>
    <string name="choice_repeat_unit">sec</string>
    <string name="str_choice_pitch">Pitch</string>
    <string name="str_choice_length">Length</string>
    <string name="choice_close">X Close</string>
    <string name="label_setup_fragment">SetupFragment</string>
    <string name="label_info_fragment">InfoFragment</string>
    <string name="label_list_fragment">UserListFragment</string>
    <string name="label_grid_fragment">UserGridFragment</string>
    <string name="label_record_fragment">UserRecordFragment</string>
    <string name="label_energy_fragment">EnergyFragment</string>
    <string name="str_back">Back</string>
    <string name="str_volume">Volume</string>
    <string name="str_operate">H.P Cperating Source</string>
    <string name="str_recognition">H.P Auto Recognition</string>
    <string name="str_animation">Intro Animation</string>
    <string name="str_date">Date</string>
    <string name="str_password">Password</string>
    <string name="str_factory_default">Factory Default</string>
    <string name="str_ultraf">ULTRAF</string>
    <string name="str_ultra">ULTRA</string>
    <string name="str_ultraf_booster">ULTRAF BOOSTER</string>
    <string name="str_cartridge">Cartridge</string>
    <string name="str_1_5mm">1.5mm</string>
    <string name="str_2_0mm">2.0mm</string>
    <string name="str_3_0mm">3.0mm</string>
    <string name="str_4_5mm">4.5mm</string>
    <string name="str_6_0mm">6.0mm</string>
    <string name="str_9_0mm">9.0mm</string>
    <string name="str_13_0mm">13.0mm</string>
    <string name="str_booster_1_5mm">1.5mm</string>
    <string name="str_booster_3_0mm">3.0mm</string>
    <string name="str_booster_4_5mm">4.5mm</string>
    <string name="str_shotcount">Shotcount</string>
    <string name="str_booster">BOOSTER</string>
    <string name="default_zero">0</string>
    <string name="default_multi_zero">00000</string>
    <string name="str_treatment">Treatment</string>
    <string name="str_user_manager">User Manager</string>
    <string name="str_video">Video</string>
    <string name="str_browser">Browser</string>
    <string name="str_gallery">Gallery</string>
    <string name="str_music">Music</string>
    <string name="str_downloads">Downloads</string>
    <string name="str_fileexplorer">File Explorer</string>
    <string name="str_increase">Increase</string>
    <string name="totalused_number">Totalused %s</string>

    <string name="dialog_reminder">Warning</string>
    <string name="dialog_commit">YES</string>
    <string name="dialog_cancel">NO</string>
    <string name="dialog_is_zero">Whether the count becomes 0"</string>
    <string name="str_both">Both</string>
    <string name="str_hand">Hand</string>
    <string name="str_foot">Foot</string>
    <string name="authentication_failure">Authentication Failure</string>
    <string name="str_new_user">New User</string>
    <string name="str_name">Name</string>
    <string name="str_gender">Gender</string>
    <string name="str_birthday">Birth Date</string>
    <string name="str_telephone">Telephone</string>
    <string name="str_email">Email</string>
    <string name="remind_input_name">Please enter your name</string>
    <string name="remind_choice_birthday">Please select a date of birth</string>
    <string name="remind_input_telephone">Please input your mobile number</string>
    <string name="remind_input_gender">Please select your gender</string>
    <string name="remind_input_email">Please input your email</string>
    <string name="str_registered_users">Registered Users</string>
    <string name="choice_birthday">%d/%d/%d</string>
    <string name="str_show_users_increase">increase</string>
    <string name="dialog_reminder_search">Please enter user phone number</string>
    <string name="dialog_delete_user_reminder">Whether you want to delete user 【%s】?</string>
    <string name="dialog_delete_record">Whether you want to delete the record ?</string>
    <string name="str_remake">Remake</string>
    <string name="str_user_manager_increase">Increase</string>
    <string name="str_refresh">Refresh</string>
    <string name="registered_users_user_manager">Registered Users</string>
    <string name="user_information">User Information</string>
    <string name="unbind_user">Unbind User</string>
    <string name="current_user">"Current User: %s</string>
    <string name="str_complete">Complete</string>
    <string name="str_instrument_title">Instrument Settings</string>
    <string name="str_energy">Energy</string>
    <string name="instrument_energy_reminder">Please set the tool head energy coefficient</string>
    <string name="str_apply">Apply</string>
    <string name="version_content">Version: %s</string>
</resources>