<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_index"
    tools:context=".ui.RegisterActivity">

    <ImageView
        android:id="@+id/iv_register_right_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/bg_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.85" />

    <ImageView
        android:id="@+id/iv_register_back"
        android:layout_width="90dp"
        android:layout_height="73dp"
        android:background="@drawable/icon_register_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/iv_register_right_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="64dp"
        android:text="@string/str_new_user"
        android:textColor="@color/register_title_text"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="@+id/iv_register_right_bg"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_register_name"
        style="@style/style_register_textview"
        android:text="@string/str_name"
        app:layout_constraintLeft_toLeftOf="@+id/iv_register_right_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_title" />

    <com.aimyskin.ultherapy_android.view.MyEditText
        android:id="@+id/et_register_name"
        style="@style/style_register_edittext"
        android:hint="@string/remind_input_name"
        app:layout_constraintLeft_toLeftOf="@+id/iv_register_right_bg"
        app:layout_constraintRight_toRightOf="@+id/iv_register_right_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_name" />

    <TextView
        android:id="@+id/tv_register_gender"
        style="@style/style_register_textview"
        android:layout_marginTop="16dp"
        android:text="@string/str_gender"
        app:layout_constraintLeft_toLeftOf="@+id/iv_register_right_bg"
        app:layout_constraintTop_toBottomOf="@+id/et_register_name" />

    <TextView
        android:id="@+id/tv_register_gender_value"
        style="@style/style_register_edittext"
        android:hint="@string/remind_input_gender"
        app:layout_constraintLeft_toLeftOf="@+id/iv_register_right_bg"
        app:layout_constraintRight_toRightOf="@+id/iv_register_right_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_gender" />

    <TextView
        android:id="@+id/tv_register_birthday"
        style="@style/style_register_textview"
        android:layout_marginTop="16dp"
        android:text="@string/str_birthday"
        app:layout_constraintLeft_toLeftOf="@+id/iv_register_right_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_gender_value" />

    <TextView
        android:id="@+id/tv_register_birthday_value"
        style="@style/style_register_edittext"
        android:hint="@string/remind_choice_birthday"
        app:layout_constraintLeft_toLeftOf="@+id/iv_register_right_bg"
        app:layout_constraintRight_toRightOf="@+id/iv_register_right_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_birthday" />


    <TextView
        android:id="@+id/tv_register_telephone"
        style="@style/style_register_textview"
        android:layout_marginTop="16dp"
        android:text="@string/str_telephone"
        app:layout_constraintLeft_toLeftOf="@+id/iv_register_right_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_birthday_value" />

    <com.aimyskin.ultherapy_android.view.MyEditText
        android:id="@+id/et_register_telephone"
        style="@style/style_register_edittext"
        android:hint="@string/remind_input_telephone"
        app:layout_constraintLeft_toLeftOf="@+id/iv_register_right_bg"
        app:layout_constraintRight_toRightOf="@+id/iv_register_right_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_telephone" />

    <TextView
        android:id="@+id/tv_register_email"
        style="@style/style_register_textview"
        android:layout_marginTop="16dp"
        android:text="@string/str_email"
        app:layout_constraintLeft_toLeftOf="@+id/iv_register_right_bg"
        app:layout_constraintTop_toBottomOf="@+id/et_register_telephone" />

    <com.aimyskin.ultherapy_android.view.MyEditText
        android:id="@+id/et_register_email"
        style="@style/style_register_edittext"
        android:hint="@string/remind_input_email"
        app:layout_constraintLeft_toLeftOf="@+id/iv_register_right_bg"
        app:layout_constraintRight_toRightOf="@+id/iv_register_right_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_email" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="180dp"
        android:layout_height="93dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/register_enter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_register_email" />

</androidx.constraintlayout.widget.ConstraintLayout>