<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_index"
    tools:context=".ui.UserManagerActivity">


    <fragment
        android:id="@+id/nav_host_fragment_user_manager"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85"
        app:navGraph="@navigation/nav_graph_user_manager" />

    <ImageView
        android:id="@+id/iv_user_manager_back"
        android:layout_width="90dp"
        android:layout_height="73dp"
        android:background="@drawable/icon_register_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/nav_host_fragment_user_manager"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/nav_host_fragment_user_manager"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_manager_back">

        <LinearLayout
            android:id="@+id/ll_user_manager_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_user_manager_check"
            android:gravity="center_vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iv_user_manager_record"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:background="@drawable/icon_record_check" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:text="@string/str_user_manager_increase"
                android:textColor="@color/user_manager_text"
                android:textSize="30sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_user_manager_remake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/shape_user_manager_uncheck"
            android:gravity="center_vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iv_user_manager_remake"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:background="@drawable/icon_list_uncheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:text="@string/str_remake"
                android:textColor="@color/user_manager_text"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_user_manager_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center_vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:background="@drawable/icon_refresh" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:text="@string/str_refresh"
                android:textColor="@color/user_manager_text"
                android:textSize="30sp" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>